--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
     "lint": "eslint .",
+    "fix": "eslint src --fix",
+    "lint:style": "stylelint \"src/**/*.{css,scss,vue}\"",
+    "lint:style:fix": "stylelint \"src/**/*.{css,scss,vue}\" --fix",
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
@@ -28,7 +31,15 @@
     "eslint": "^9.39.2",
     "eslint-plugin-vue": "^10.7.0",
     "npm-run-all2": "^8.0.4",
+    "postcss-html": "^1.8.1",
+    "postcss-scss": "^4.0.9",
     "prettier": "3.8.1",
+    "stylelint": "^17.1.1",
+    "stylelint-config-recess-order": "^7.6.0",
+    "stylelint-config-recommended-vue": "^1.6.1",
+    "stylelint-config-standard": "^40.0.0",
+    "stylelint-config-standard-scss": "^17.0.0",
+    "stylelint-scss": "^7.0.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.54.0",
     "vite": "^7.3.1",
