--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "run-p type-check \"build-only {@}\" --",
+    "build:test": "vue-tsc && vite build --mode test",
+    "build:pro": "vue-tsc && vite build --mode production",
     "lint": "eslint .",
     "fix": "eslint src --fix",
     "lint:style": "stylelint \"src/**/*.{css,scss,vue}\"",
