--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "postcss-html": "^1.8.1",
     "postcss-scss": "^4.0.9",
     "prettier": "3.8.1",
+    "sass": "^1.97.3",
     "stylelint": "^17.1.1",
     "stylelint-config-recess-order": "^7.6.0",
     "stylelint-config-recommended-vue": "^1.6.1",
