--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "axios": "^1.13.4",
     "element-plus": "^2.13.2",
     "pinia": "^3.0.4",
     "vue": "^3.5.27",
