--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 # 开发环境
 NODE_ENV = 'development'
 VITE_APP_TITLE = '硅谷甄选运营平台'
-VITE_APP_BASE_API = '/admin'
+VITE_APP_BASE_API = '/api'
 # 开发阶段api地址
 VITE_SERVER = 'http://104.224.154.244:10086/'
